# normard-langchain

./: .gitignore  .pre-commit-config.yaml  .python-version  Challenge13_RAG.ipynb  Document.py  Home.py  Quiz.py  Top1_OpenAI_Assistants.py  app.py  home.py  langchain-test1-DoubleChain.ipynb  langchain-test2-Template.ipynb  langchain-test2.ipynb  langchain-test3 copy.ipynb  langchain-test3-Memory.ipynb  langchain-test3.ipynb  langchain-test4-RAG.ipynb  langchain-test5-Agentfinal.ipynb  langchin-test.ipynb  langchin-test2.ipynb  notebook.ipynb  pyproject.toml  quiz_function.py  requirements.txt  requirements2.txt
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
notebook/: 20240412_014929_research_results.txt  ASISTANT.py  Research about the XZ backdoor.txt  SQL-test.ipynb  galaxy-agent.ipynb  langchain-test3-Memory.ipynb  langchain-test5-Agent.ipynb  langchain.ipynb  notebook (2).ipynb  notebook (3).ipynb  notebook.ipynb  testAssistant.ipynb
pages/: 01.Document.py  01_Document.py  01_DoucumentGPT.py  02_DoucumentGPT2.py  03_Quiz.py  04_SiteGPT.py  05_InvestGPT.py  06_FinalAssitant.py
pages_test/: 01_DoucumentGPT.py
