[tool.poetry]
name = "normard-langchain"
version = "0.1.0"
description = ""
authors = ["haru <88703915+lips85@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
langchain = "^0.1.14"
streamlit = "^1.32.2"
langsmith = "^0.1.39"
jupyter = "^1.0.0"
langchain-openai = "^0.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
